"""Backend Brawl"""
# https://bazel.build/rules/lib/globals/module

###
### Module
### https://bazel.build/rules/lib/globals/module#module
###
module(
    name = "backend_brawl",
    version = "0.1.0",
)

###
### Dependencies
### https://bazel.build/rules/lib/globals/module#bazel_dep
###
bazel_dep(name = "rules_go", version = "0.46.0")  # https://registry.bazel.build/modules/rules_go
bazel_dep(name = "gazelle", version = "0.35.0")  # https://registry.bazel.build/modules/gazelle

###
### Go and Gazelle
###
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_tailscale_sqlite",
)
