load("@rules_go//go:def.bzl", "go_library", "go_binary", "go_cross_binary")

go_library(
    name = "src_lib",
    srcs = ["backend_brawl.go"],
    importpath = "backend-brawl/src",
    visibility = ["//visibility:private"],
    deps = ["//src/api"],
)

go_binary(
    name = "backend_brawl",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

# bazel build //src:linux_amd64
# Execute: ./bazel-bin/src/linux_amd64
# TODO: Fix 'panic: cgosqlite.Open is missing'
go_cross_binary(
    name = "linux_amd64",
    platform = "@rules_go//go/toolchain:linux_amd64",
    target = ":backend_brawl",
    visibility = ["//visibility:public"],
)
